--- a/app/src/main/res/layout/category_card.xml
+++ b/app/src/main/res/layout/category_card.xml
@@ -8,7 +8,7 @@
     app:cardElevation="4dp"
     app:cardCornerRadius="3dp">
 
-    <RelativeLayout
+    <RelativeLayout android:id="@+id/container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     <ImageView
