--- a/app/src/main/res/layout/fragment_error.xml
+++ b/app/src/main/res/layout/fragment_error.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -9,7 +9,7 @@
     android:layout_height="wrap_content"
     android:textColor="@android:color/black"
     android:textSize="@dimen/large_font_size"
-    android:layout_gravity="center_vertical"
+    android:layout_centerInParent="true"
     android:gravity="center"
     tools:text="Error msg"/>
-</LinearLayout>
+</RelativeLayout>
