Search result list & detail screen changes

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="regular_font_size">13sp</dimen>
     <dimen name="large_font_size">16sp</dimen>
     <dimen name="vlarge_font_size">22sp</dimen>
+    <dimen name="category_margin_zero">0dp</dimen>
 </resources>
