--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,23 @@
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:gravity">center_horizontal</item>
     </style>
+    <style name="search_result_title">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">@dimen/large_font_size</item>
+        <item name="android:layout_margin">@dimen/category_title_margin</item>
+        <item name="android:layout_gravity">left|start</item>
+        <item name="android:gravity">left|start</item>
+    </style>
+    <style name="search_result_rating">
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">20dp</item>
+        <item name="android:layout_gravity">left|start</item>
+        <item name="android:gravity">left|start</item>
+        <item name="android:layout_marginLeft">@dimen/category_title_margin</item>
+        <item name="android:layout_marginRight">@dimen/category_title_margin</item>
+        <item name="android:layout_marginBottom">@dimen/category_title_margin</item>
+        <item name="android:layout_marginTop">@dimen/category_margin_zero</item>
+    </style>
 </resources>
