--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
     <style name="category_name">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -16,6 +17,7 @@
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:gravity">center_horizontal</item>
     </style>
+
     <style name="search_result_title">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -25,14 +27,55 @@
         <item name="android:layout_gravity">left|start</item>
         <item name="android:gravity">left|start</item>
     </style>
+
     <style name="search_result_rating">
-        <item name="android:layout_width">50dp</item>
-        <item name="android:layout_height">20dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:numStars">5</item>
         <item name="android:layout_gravity">left|start</item>
         <item name="android:gravity">left|start</item>
         <item name="android:layout_marginLeft">@dimen/category_title_margin</item>
         <item name="android:layout_marginRight">@dimen/category_title_margin</item>
         <item name="android:layout_marginBottom">@dimen/category_title_margin</item>
         <item name="android:layout_marginTop">@dimen/category_margin_zero</item>
+        <item name="android:focusable">false</item>
+        <item name="android:isIndicator">true</item>
+    </style>
+
+    <style name="detail_title">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">@dimen/large_font_size</item>
+        <item name="android:layout_margin">@dimen/category_title_margin</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="detail_address" parent="detail_title">
+        <item name="android:textSize">@dimen/small_font_size</item>
+    </style>
+    <style name="open_now_symbol">
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">@dimen/category_title_margin</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">@dimen/large_font_size</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="timing_text" >
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">@dimen/medium_font_size</item>
+        <item name="android:layout_margin">@dimen/category_title_margin</item>
+        <item name="android:layout_gravity">left|start</item>
+        <item name="android:gravity">left|start</item>
+        <item name="android:layout_weight">2</item>
     </style>
 </resources>
