--- a/app/src/main/res/layout/widget_grid_cell.xml
+++ b/app/src/main/res/layout/widget_grid_cell.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:id="@+id/cellContainer">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/cellContainer"
+    android:background="@color/colorPrimaryDark">
 
-    <TextView
-        android:id="@+id/placeName"
-        style="@style/search_result_title"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_gravity="center_horizontal"
-        tools:text="result" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_centerInParent="true">
+        <TextView
+            android:id="@+id/placeName"
+            style="@style/search_result_title"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center_horizontal"
+            tools:text="result" />
 
-    <ImageView
-        android:id="@+id/categoryType"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_gravity="center_horizontal"
-        tools:background="@mipmap/ic_launcher_round" />
+        <ImageView
+            android:id="@+id/categoryType"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center_horizontal"
+            tools:background="@mipmap/ic_launcher_round" />
+    </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
