adding unit test

--- a/app/src/main/res/layout/activity_search_category_result.xml
+++ b/app/src/main/res/layout/activity_search_category_result.xml
@@ -12,7 +12,7 @@
         android:visibility="gone" />
 
     <FrameLayout
-        android:id="@+id/main_container"
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </RelativeLayout>
