--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="vlarge_font_size">22sp</dimen>
     <dimen name="category_margin_zero">0dp</dimen>
     <dimen name="poster_image_height">200dp</dimen>
+    <dimen name="phone_website_margin">20dp</dimen>
 </resources>
