--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,24 +43,57 @@
         <item name="android:isIndicator">true</item>
     </style>
 
+    <style name="search_detail_rating" parent="search_result_rating">
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+
+    <style name="search_rating" parent="search_result_rating">
+        <item name="android:scaleX">0.5</item>
+        <item name="android:scaleY">0.5</item>
+        <item name="android:transformPivotX">0dp</item>
+        <item name="android:transformPivotY">0dp</item>
+    </style>
+
     <style name="detail_title">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">@dimen/large_font_size</item>
-        <item name="android:layout_margin">@dimen/category_title_margin</item>
+        <item name="android:layout_marginTop">@dimen/category_title_margin</item>
+        <item name="android:layout_marginLeft">@dimen/category_title_margin</item>
+        <item name="android:layout_marginRight">@dimen/category_title_margin</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="detail_address" parent="detail_title">
-        <item name="android:textSize">@dimen/small_font_size</item>
+        <item name="android:textSize">@dimen/regular_font_size</item>
     </style>
+
+    <style name="phone_website_address">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/regular_font_size</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:singleLine">false</item>
+        <item name="android:layout_marginTop">@dimen/category_title_margin</item>
+        <item name="android:layout_marginLeft">@dimen/phone_website_margin</item>
+        <item name="android:layout_marginRight">@dimen/phone_website_margin</item>
+        <item name="android:layout_marginBottom">0dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:gravity">center_horizontal|center_vertical</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="open_now_symbol">
         <item name="android:layout_width">100dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_margin">@dimen/category_title_margin</item>
+        <item name="android:layout_marginTop">@dimen/category_title_margin</item>
+        <item name="android:layout_marginLeft">@dimen/phone_website_margin</item>
+        <item name="android:layout_marginRight">@dimen/phone_website_margin</item>
+        <item name="android:layout_marginBottom">0dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:background">@color/colorAccent</item>
@@ -70,14 +103,16 @@
     </style>
 
     <style name="timing_text" >
-        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">@dimen/medium_font_size</item>
-        <item name="android:layout_margin">@dimen/category_title_margin</item>
-        <item name="android:layout_gravity">left|start</item>
-        <item name="android:gravity">left|start</item>
-        <item name="android:layout_weight">2</item>
+        <item name="android:layout_marginTop">@dimen/category_title_margin</item>
+        <item name="android:layout_marginLeft">@dimen/phone_website_margin</item>
+        <item name="android:layout_marginRight">@dimen/phone_website_margin</item>
+        <item name="android:layout_marginBottom">0dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:gravity">center_horizontal</item>
     </style>
 
     <style name="favorite">
