--- a/app/src/main/res/layout/fragment_search_detail.xml
+++ b/app/src/main/res/layout/fragment_search_detail.xml
@@ -38,24 +38,20 @@
             android:orientation="vertical"
             android:visibility="gone">
 
-            <ImageView
-                android:id="@+id/posterImage"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/poster_image_height"
-                android:layout_alignParentTop="true"
-                tools:background="@mipmap/ic_launcher"
-                android:visibility="gone"/>
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/reviews"
-                style="@style/detail_address"
-                android:clickable="true"
-                android:visibility="gone"/>
+                <ImageView
+                    android:id="@+id/posterImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/poster_image_height"
+                    android:layout_alignParentTop="true"
+                    tools:background="@mipmap/ic_launcher"
+                    android:visibility="gone"/>
 
-            <android.support.v7.widget.RecyclerView android:id="@+id/reviewList"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"/>
+
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/placeTitle"
@@ -68,20 +64,6 @@
                 style="@style/detail_address"
                 android:textColor="@color/colorPrimary"
                 tools:text="address" />
-
-            <TextView
-                android:id="@+id/phoneNumber"
-                style="@style/phone_website_address"
-                tools:text="28275855353"
-                android:drawableLeft="@drawable/call"
-                android:visibility="gone"/>
-
-            <TextView
-                android:id="@+id/website"
-                style="@style/phone_website_address"
-                tools:text="www.google.com"
-                android:drawableLeft="@drawable/website"
-                android:visibility="gone"/>
 
             <RatingBar
                 android:id="@+id/resultRating"
@@ -99,16 +81,52 @@
                 tools:text="Opens at" />
 
             <TextView
-                android:id="@+id/imageLink"
+                android:id="@+id/reviews"
                 style="@style/detail_address"
                 android:clickable="true"
+                android:drawableRight="@drawable/up"
                 android:visibility="gone"/>
 
-            <TextView
-                android:id="@+id/addToFavorite"
-                style="@style/favorite"
-                android:drawableRight="@drawable/favorite_off"
-                android:text="@string/add_to_favorite" />
+            <android.support.v7.widget.RecyclerView android:id="@+id/reviewList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@color/colorAccent"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical">
+
+                <ImageView
+                    android:id="@+id/phoneNumber"
+                    style="@style/phone_website_address"
+                    android:clickable="true"
+                    android:background="@drawable/call"
+                    android:visibility="gone"/>
+
+                <ImageView
+                    android:id="@+id/website"
+                    style="@style/phone_website_address"
+                    android:clickable="true"
+                    android:background="@drawable/website"
+                    android:visibility="gone"/>
+
+                <ImageView
+                    android:id="@+id/imageLink"
+                    style="@style/phone_website_address"
+                    android:clickable="true"
+                    android:background="@drawable/photo"
+                    android:visibility="gone"/>
+                <ImageView
+                    android:id="@+id/addToFavorite"
+                    style="@style/phone_website_address"
+                    android:clickable="true"
+                    android:background="@drawable/favorite_off"/>
+            </LinearLayout>
+
 
             <com.google.android.gms.maps.MapView
                 android:id="@+id/placeLocation"
