--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,21 +70,22 @@
 
     <style name="detail_address" parent="detail_title">
         <item name="android:textSize">@dimen/regular_font_size</item>
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:layout_marginLeft">0dp</item>
+        <item name="android:layout_marginRight">0dp</item>
+        <item name="android:layout_gravity">center_horizontal|center_vertical</item>
+        <item name="android:gravity">center_horizontal|center_vertical</item>
     </style>
 
     <style name="phone_website_address">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">@dimen/regular_font_size</item>
-        <item name="android:textColor">@android:color/black</item>
-        <item name="android:singleLine">false</item>
         <item name="android:layout_marginTop">@dimen/category_title_margin</item>
         <item name="android:layout_marginLeft">@dimen/phone_website_margin</item>
         <item name="android:layout_marginRight">@dimen/phone_website_margin</item>
-        <item name="android:layout_marginBottom">0dp</item>
-        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_marginBottom">@dimen/category_title_margin</item>
+        <item name="android:layout_gravity">center_horizontal|center_vertical</item>
         <item name="android:gravity">center_horizontal|center_vertical</item>
-        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="open_now_symbol">
@@ -118,12 +119,10 @@
     <style name="favorite">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:gravity">center_horizontal|center_vertical</item>
-        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:gravity">right|end</item>
+        <item name="android:layout_gravity">right|end</item>
         <item name="android:paddingLeft">20dp</item>
         <item name="android:paddingRight">20dp</item>
         <item name="android:layout_marginBottom">10dp</item>
-        <item name="android:textColor">@android:color/black</item>
-        <item name="android:textSize">@dimen/medium_font_size</item>
     </style>
 </resources>
