updated review ui

--- a/app/src/main/res/layout/review_list_row.xml
+++ b/app/src/main/res/layout/review_list_row.xml
@@ -14,34 +14,42 @@
 
         <ImageView
             android:id="@+id/reviewerPhoto"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true" />
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/reviewerPhoto"
-            android:gravity="center_vertical"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="10dp"
+            android:gravity="left|start"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/reviewerName"
-                style="@style/detail_address"
+                style="@style/timing_text"
                 android:gravity="left|start"
-                tools:text="name" />
+                tools:text="name"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/reviewerTimeline"
                 style="@style/timing_text"
                 android:gravity="left|start"
-                tools:text=" days ago" />
+                tools:text="days ago" />
 
             <RatingBar
                 android:id="@+id/reviewer_rating"
-                style="@style/search_rating" />
+                style="@style/search_rating"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_gravity="left|start"/>
+
         </LinearLayout>
 
         <TextView
@@ -49,6 +57,8 @@
             style="@style/timing_text"
             android:layout_below="@+id/reviewerPhoto"
             android:gravity="left|start"
-            tools:text=" sfdsafasdf ago" />
+            tools:text="sfdsafasdf ago"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"/>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
