--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -112,8 +112,8 @@
         <item name="android:layout_marginLeft">@dimen/phone_website_margin</item>
         <item name="android:layout_marginRight">@dimen/phone_website_margin</item>
         <item name="android:layout_marginBottom">0dp</item>
-        <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:gravity">center_horizontal</item>
+        <item name="android:layout_gravity">left|start</item>
+        <item name="android:gravity">left|start</item>
     </style>
 
     <style name="favorite">
@@ -124,5 +124,15 @@
         <item name="android:paddingLeft">20dp</item>
         <item name="android:paddingRight">20dp</item>
         <item name="android:layout_marginBottom">10dp</item>
+    </style>
+
+    <style name="review_detail">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/regular_font_size</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:layout_gravity">left|start</item>
+        <item name="android:gravity">left|start</item>
     </style>
 </resources>
