resolved favorite screen landscape mode issue

--- a/app/src/main/res/layout/fragment_search_detail.xml
+++ b/app/src/main/res/layout/fragment_search_detail.xml
@@ -79,6 +79,8 @@
                 android:id="@+id/weeklyTiming"
                 style="@style/timing_text"
                 android:visibility="gone"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"
                 tools:text="Opens at" />
 
             <TextView
