--- a/app/src/main/res/layout/review_list_row.xml
+++ b/app/src/main/res/layout/review_list_row.xml
@@ -16,30 +16,31 @@
             android:id="@+id/reviewerPhoto"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:contentDescription="@string/reader_text_reviewer_photo"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_marginTop="10dp"
-            android:gravity="left|start"
+            android:gravity="left"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/reviewerName"
                 style="@style/timing_text"
-                android:gravity="left|start"
+                android:gravity="left"
                 tools:text="name"
                 android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/reviewerTimeline"
                 style="@style/timing_text"
-                android:gravity="left|start"
+                android:gravity="left"
                 tools:text="days ago" />
 
             <RatingBar
@@ -47,8 +48,8 @@
                 style="@style/search_rating"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_gravity="left|start"/>
+                android:layout_marginStart="20dp"
+                android:layout_gravity="left"/>
 
         </LinearLayout>
 
@@ -56,7 +57,7 @@
             android:id="@+id/reviewerText"
             style="@style/timing_text"
             android:layout_below="@+id/reviewerPhoto"
-            android:gravity="left|start"
+            android:gravity="left"
             tools:text="sfdsafasdf ago"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"/>
