--- a/app/src/main/res/layout/widget_grid_cell.xml
+++ b/app/src/main/res/layout/widget_grid_cell.xml
@@ -16,6 +16,7 @@
             style="@style/search_result_title"
             android:layout_width="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
             tools:text="result" />
 
         <ImageView
